@@ -6,8 +6,8 @@ import com.hbsites.hbsitescommons.dto.UserDTOListPayload;
 import com.hbsites.hbsitescommons.utils.UserUtils;
 import com.hbsites.rpgtracker.core.config.RabbitMQConfig;
 import com.hbsites.rpgtracker.core.dto.BasicSessionListingDTO;
-import com.hbsites.rpgtracker.core.dto.SessionListingDTO;
 import com.hbsites.rpgtracker.core.entity.CharacterSheetEntity;
+import com.hbsites.rpgtracker.core.entity.SessionEntity;
 import com.hbsites.rpgtracker.core.repository.SessionRepository;
 import org.springframework.amqp.core.Message;
 import org.springframework.amqp.core.MessageBuilder;
@@ -17,7 +17,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Lazy;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -35,34 +34,34 @@ public class SessionService {
     private RabbitTemplate rabbitTemplate;
 
     public List<BasicSessionListingDTO> getDMedSessions() {
-        return sessionRepository.findAllByDmId(UserUtils.getUserUUID()).stream().map(en -> {
-            SessionListingDTO dto = ((SessionListingDTO) en.toListDTO());
-            dto.setPlayers(new ArrayList<>());
+        return sessionRepository.findAllByDmId(UUID.fromString("9af40220-4bf3-4e42-90f6-9f24c449aac4"))
+                .stream()
+                .map(e -> {
+                    BasicSessionListingDTO dto = e.toListDTO();
+                    // Populate player list
+                    List<UUID> playerIds = e.getSheets().stream().map(CharacterSheetEntity::getPlayerId).toList();
+                    HashSet<UUID> playerIdsUnique = new HashSet<UUID>(playerIds);
 
-            // Populate player list
-            List<UUID> playerIds = (List<UUID>) en.getSheets().stream().map(sheet -> ((CharacterSheetEntity)sheet).getPlayerId()).collect(Collectors.toList());
-            HashSet<UUID> playerIdsUnique = new HashSet<UUID>(playerIds);
+                    Message newMsg = MessageBuilder.withBody(SerializationUtils.serialize(new UUIDListPayload(playerIdsUnique.stream().toList()))).build();
+                    Message result = rabbitTemplate.sendAndReceive(RabbitMQConfig.USER_EXCHANGE, RabbitMQConfig.USER_REQUEST_QUEUE, newMsg);
+                    if (result != null) {
+                        // To get message sent correlationId
+                        String correlationId = newMsg.getMessageProperties().getCorrelationId();
 
-            Message newMsg = MessageBuilder.withBody(SerializationUtils.serialize(playerIdsUnique.stream().toList())).build();
-            Message result = rabbitTemplate.sendAndReceive(RabbitMQConfig.USER_EXCHANGE, RabbitMQConfig.USER_REQUEST_QUEUE, newMsg);
-            if (result != null) {
-                // To get message sent correlationId
-                String correlationId = newMsg.getMessageProperties().getCorrelationId();
-
-                // Get response header information
-                HashMap<String, Object> headers = (HashMap<String, Object>) result.getMessageProperties().getHeaders();
-                // Access server Message returned id
-                String msgId = (String) headers.get("spring_returned_message_correlation");
-                if (msgId.equals(correlationId)) {
-                    UserDTOListPayload users = (UserDTOListPayload) SerializationUtils.deserialize(result.getBody());
-                    dto.setPlayers(playerIdsUnique.stream().map(uuid ->
-                            users.getUsers().stream().filter(us -> us.getUuid().equals(uuid)).findFirst().orElse(new UserDTO()).getDisplayName()
-                    ).collect(Collectors.toList()));
-                }
-            }
-
-            return dto.asBasic();
-        }).collect(Collectors.toList());
+                        // Get response header information
+                        HashMap<String, Object> headers = (HashMap<String, Object>) result.getMessageProperties().getHeaders();
+                        // Access server Message returned id
+                        String msgId = (String) headers.get("spring_returned_message_correlation");
+                        if (msgId.equals(correlationId)) {
+                            UserDTOListPayload users = (UserDTOListPayload) SerializationUtils.deserialize(result.getBody());
+                            dto.setPlayers(playerIdsUnique.stream().map(uuid ->
+                                    users.getUsers().stream().filter(us -> us.getUuid().equals(uuid)).findFirst().orElse(new UserDTO()).getDisplayName()
+                            ).collect(Collectors.toList()));
+                        }
+                    }
+                    return dto;
+                })
+                .collect(Collectors.toList());
     }
 
 }
